# jadwal-sholat

./: Cargo.toml
src/: client.rs  config.rs  daerah.rs  jadwal.rs  main.rs
