[package]
name = "jadwal-sholat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "json"] }
# reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
