[package]
name = "jadwal-sholat"
version = "0.1.1"
author = "Novi Ardi"
about = "Jadwal shalat - using bimasislam.kemenag.go.id/jadwalshalat as source"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "json"] }
# reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "4.0"
clap = { version = "4.4.13", features = ["derive"] }
